--- a/_posts/2022-04-21-INITIUM-早报-美国再向乌克兰提供8亿美元军备-马里乌波尔疑现新建大型墓地.html
+++ b/_posts/2022-04-21-INITIUM-早报-美国再向乌克兰提供8亿美元军备-马里乌波尔疑现新建大型墓地.html
@@ -11,7 +11,7 @@ author:
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220422-morning-brief/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/eb080e2fe9414e498f6c6e4bdeb949db.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年4月21日在乌克兰马里乌波尔，搜救人员乘坐货车在市内徘徊，搜索战争遇难者的遗体。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年4月21日在乌克兰马里乌波尔，搜救人员乘坐货车在市内徘徊，搜索战争遇难者的遗体。<span class="credit">摄：Alexander Ermochenko / Reuters</span></figcaption></figure><h3>美国再向乌克兰提供13亿美元经济及军事援助，另外马里乌波尔疑现新建大型墓地</h3>
 <p>美国总统拜登在白宫会见到访的乌克兰总理什梅加尔（Denys Shmyhal），期间形容乌克兰抵抗俄军入侵的战事来到了“关键的窗口”，指俄军准备将战事推进到下一阶段，宣布再向乌克兰提供5亿美元的经济援助及价值8亿美元的军备。</p>
-<p>美国向乌克兰提供的新一批军备，<a href="https://www.reuters.com/world/us-rapidly-developed-ghost-drones-ukraine-pentagon-says-2022-04-21/">包括因应乌克兰要求而快速研发的新型战术无人机 Phoenix Ghost</a>，以至重型火炮、逾14万发弹药等。拜登指出，美国正向乌克兰提供及时情报，所有武器会在未来数周内直接送往冲突前线。</p>
+<p>美国向乌克兰提供的新一批军备，<a href="https://www.reuters.com/world/us-rapidly-developed-ghost-drones-ukraine-pentagon-says-2022-04-21/">包括因应乌克兰要求而快速研发的新型战术无人机 Phoenix Ghost</a>，以至重型火炮、逾14万发弹药等。拜登指出，美国正向乌克兰提供即时情报，所有武器会在未来数周内直接送往冲突前线。</p>
 <p>拜登宣布再向乌克兰提供5亿美元的直接经济援助，但指未来再向乌克兰提供额外援助之前，需要寻求美国国会拨款。另外，拜登表示会禁止俄罗斯船只停靠美国港口，同时放宽接受乌克兰难民的条件，包括简化申请程序，预料可以接收10万名逃避战火的乌克兰难民。</p>
 <p>美国以外，西班牙首相桑切斯（Pedro Sánchez）及丹麦首相弗雷泽里克森（Mette Frederiksen）于当地周四（21日）到访基辅，期间与乌克兰总统泽连斯基（Volodymyr Zelenskyy）会晤。桑切斯表示，西班牙正向乌克兰运送新一批共200吨弹药及军用物资。弗雷泽里克森则指，丹麦将再向乌克兰提供价值逾8700万美元的军事援助，并且会支持进一步制裁俄罗斯。</p>
 <p><strong>拜登对俄方宣称成功占领马里乌波尔抱持怀疑</strong></p>
