--- a/_posts/2022-04-22-PQ-補助本田-日產研發固態電池-日本蓄電池產能放眼2030增20倍.html
+++ b/_posts/2022-04-22-PQ-補助本田-日產研發固態電池-日本蓄電池產能放眼2030增20倍.html
@@ -5,7 +5,7 @@ date: 2022-04-22 00:32:50.000000000 +00:00
 link: https://pourquoi.tw/2022/04/22/intlnews-neasia-220415-220421-1/
 categories: pq
 tags: blog
-author: 陳怡菱
+author: 林貝利
 ---
 
 <p>日本政府為鼓勵日本國內企業的蓄電池（又稱可充電電池，rechargeable battery）產業，將目標設定在 2030 年達到 600 百萬瓩時（GW/h）的生產能力。這個目標是 2020 年的 20 倍，透過擴充補助鼓勵民間企業投資，維持在全球的市佔率，以期在原物料取得上可以獲得優勢。</p>
