--- a/_posts/2022-04-22-INMEDIA-廚師擲鐵罐出馬路囚55天-高院駁回上訴-官斥上訴方-雞蛋裡挑骨頭.html
+++ b/_posts/2022-04-22-INMEDIA-廚師擲鐵罐出馬路囚55天-高院駁回上訴-官斥上訴方-雞蛋裡挑骨頭.html
@@ -8,9 +8,9 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/14_7.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 2019年11月11日有市民發起「大三罷」，30歲廚師涉在西灣河將鐵罐拋出馬路，前年審訊後被裁定一項在公眾地方造成阻礙罪成立，判囚55天。他向高等法院申請上訴，期間准保釋。高院今（22日）駁回其定罪及判刑上訴，上訴人須即時服刑。上訴方指裁判官沒充分考慮警長證供有矛盾，但遭法官陳慶偉批評就微細差別作挑剔，是「雞蛋裡挑骨頭」及不切實際。另外，上訴方指裁判官沒有依從指引，犯下原則上錯誤。陳官強調，審理本案的是一位具經驗的裁判官，他已充分考慮過不同爭議點。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/14_7.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 2019年11月11日有市民發起「大三罷」，30歲廚師涉在西灣河將鐵罐拋出馬路，前年審訊後被裁定一項在公眾地方造成阻礙罪成立，判囚55天。他向高等法院申請上訴，期間准保釋。高院今（22日）駁回其定罪及判刑上訴，上訴人須即時服刑。上訴方指原審裁判官鄭紀航沒充分考慮警長證供有矛盾，但遭法官陳慶偉批評就微細差別作挑剔，是「雞蛋裡挑骨頭」及不切實際。另外，上訴方指裁判官沒有依從指引，犯下原則上錯誤。陳官強調，鄭官是一位具經驗的裁判官，他已充分考慮過不同爭議點。</p>
 <p><strong>上訴方指原審官的裁定錯誤  高院：沒有犯錯</strong></p>
-<p>上訴人為報稱廚師的鄭鉦達（30歲）。上訴方指出，裁判官錯誤裁定鐵罐由上訴人擲出。裁判官當時表示鐵罐是海寧街東面被擲出，這與警長說法吻合，但上訴方認為上述裁定是錯誤，從片段可見，鐵罐實際上是從海寧街西面被擲出。</p>
+<p>上訴人為報稱廚師的鄭鉦達（30歲）。上訴方指出，原審裁判官鄭紀航錯誤裁定鐵罐由上訴人擲出。裁判官當時表示鐵罐是海寧街東面被擲出，這與警長說法吻合，但上訴方認為上述裁定是錯誤，從片段可見，鐵罐實際上是從海寧街西面被擲出。</p>
 <p>高院原訟庭法官陳慶偉指，看畢片段後，雖然不能絕對肯定鐵罐從哪方被擲出，但據鐵罐被拋擲的方向，警長說法的可能性相對較高。</p>
 <p>另外，上訴人被追捕時靠著海寧街東面逃跑，陳官認為上訴人選擇這路線，是可最快逃離；而片段亦顯示上訴人最終被制服的地方，正是海寧街靠近東面的馬路上。因此他信納裁判官裁定鐵罐是上訴人擲出，並沒有犯錯。</p>
 <p><strong>上訴方指原審官沒考慮警長證供矛盾 高院批「雞蛋裡挑骨頭」</strong></p>
