Update VOCUS 2022-04-23 patch

--- a/_posts/2019-05-13-VOCUS-公私樓落成量難達6-4比.html
+++ b/_posts/2019-05-13-VOCUS-公私樓落成量難達6-4比.html
@@ -10,10 +10,10 @@ author: REDBRIC
 
 <p>自從多年前政府宣佈公私樓供應定為6:4比，去年再進一步提升至7:3比後，一般以為公屋的供應量應比私樓為多，但看完我上星期的文章[1]，發現公屋供應反而下跌，私樓供應繼續增加，怎麼6:4比的土地供應卻會造成4:6比的落成量比例？</p>
 <p>先看一看比例數字，圖1是2009-2018年公營房屋落量(包括資助房屋)佔整體住宅落成量比例及2019-2022年的預測比例 (假設2019-2022年每年私樓落成量為2萬伙)，除了2009年達到六成以上外，其餘各年均低於六成，最低更只有36%，平均數大約五成 (49%)；預測未來幾年仍然是五成左右 (48%)，並見不到甚麼7:3比；即使私樓回落至每年18000伙，未來幾年的公屋落成量仍只佔整體的50%，遠遠未及7:3比。</p>
+<img src="https://images.vocus.cc/e852d575-daea-4661-a270-aa48314d2102.png" alt="圖1 公營房屋佔整體住宅落成量比例，資料來源：運房局及差估署 [1]">
 <p>圖1 公營房屋佔整體住宅落成量比例，資料來源：運房局及差估署 [1]</p>
 <p>必須指出，統計上由於公布時間和方式不同，公私樓落成量的比例一直難以準確量度，譬如公屋計年度，私樓計年份，而且私樓的建屋速度可快可慢，建多少伙單位又可以因應市場而把尺數變化，用落成量計算比例不一定準確。然而，當政府指責發展商有9000伙已落成的單位不出售，因此要徵收空置稅以逼使儘快出售，換言之，過去幾年私樓市場有誘因減慢落成出售，私樓的落成量應該已人為地壓低，但仍然比公屋量的多，可見公屋的落成量其實是遠低於私樓，政府聲稱因為無地，但私樓地卻源源不絕，背後是否反映所謂的6:4比土地供應量其實不是真相，抑或另有原因？</p>
 <p>其實如果私樓供應每年有2萬伙，公屋供應需要達到3萬伙，才有6:4比。而如果要提升至7:3比，公屋供應更加要一下子上升56.7%，至47000伙！長官一句隨口話，以為6:4變7:3比例只加一，其實背後所代表的增長率違反現實能力，幾乎不可能！</p>
 <p>#公私樓6:4比 </p>
 <p>參考：</p>
 <p>[1] 姚松炎 (2019) 香港公營房屋落成量預測，5月9日。<a href="https://vocus.cc/@ecyY/5cd3ff47fd89780001dface6">https://vocus.cc/@ecyY/5cd3ff47fd89780001dface6</a></p>
-<p><br></p>
