--- a/_posts/2019-05-13-VOCUS-香港公營房屋落成量預測.html
+++ b/_posts/2019-05-13-VOCUS-香港公營房屋落成量預測.html
@@ -10,8 +10,10 @@ author: REDBRIC
 
 <p>近年隨著政府把大量公營出租房屋轉為資助出售房屋，而且把公屋地盤轉為私樓地出售，根據房委會的預測數字，香港的公營出租房屋在過去四年維持在14153伙，而未來四年亦只有13250伙，不但未能增加公屋供應，反而輕微下跌。(圖1)</p>
 <p>而資助出售房屋反而有明顯的增長，今年(2018/19)的資助出售房屋量更加打破近20年的高位，達到9121伙，包括居屋和綠置居。未來四年預測仍有每年平均4525伙。計及所有房委會和房協的房屋落成量，過去四年平均每年17284伙，未來四年平均每年18500伙，只有輕微的7%增長。(圖1)</p>
+<img src="https://images.vocus.cc/b743e305-3f95-484c-b9d5-9d5c83ab2269.png" alt="圖1 各類公營房屋落成量及預測落成量。資料來源：房委會及房協[1][2]">
 <p>圖1 各類公營房屋落成量及預測落成量。資料來源：房委會及房協[1][2]</p>
 <p>背後的原因與土地供應轉為向私人發展商出售有關，圖2為過去十年的私樓動工量，可見趨勢一直持續上升，前年更衝上25500伙，成為近年新高，這正與土地供應轉向賣給發展私人樓有關。(圖2)</p>
+<img src="https://images.vocus.cc/fb67672d-7af5-4ec7-bed2-2366e5e312a8.png" alt="圖2 私樓動工量 2009 - 2018年。資料來源：運房局 [3]">
 <p>圖2 私樓動工量 2009 - 2018年。資料來源：運房局 [3]</p>
 <p>但當發展商發覺供應增加，為免影響價格，以減慢新樓供應，根據運房局 (2019) 的資料，2017年前已落成的私樓至今仍有2900伙未出售，2017及2018年落成的私樓則分別有2600及2900伙未出售，所有未出售的落成私樓合共8900伙。因此，政府決定提出一手樓空置稅，圖逼使發展商把貨尾出售。</p>
 <p>換言之，政府把更多土地給予私人發展商，把大量落成公屋轉為資助出售房屋，兩招皆令公營出租房屋量減少，卻因為發展商囤積而未有明顯增加私樓供應量，變成既犧牲了公屋輪候冊家庭，又幫不到私樓上車人士，增加土地供應，卻兩邊不討好，樓價租金也沒有回落，只有發展商和好運抽中居屋和綠置居家庭得益。</p>
