--- a/_posts/2019-05-21-VOCUS-5-的樓價上升來自洗黑錢.html
+++ b/_posts/2019-05-21-VOCUS-5-的樓價上升來自洗黑錢.html
@@ -11,17 +11,20 @@ author: REDBRIC
 <p>加拿大BC省政府三月初發表報告，有高達53億加元的房屋交易與國際洗黑錢有關，成為樓價暴漲的原因之一；報告同時估計與洗黑錢有關的交易佔整體房地產交易總額的5％，導致房地產價格上漲5％。而且房地產市場成為洗黑錢集團的最大漂白場地，專家估計高達72%的黑錢(74億加元)流入房地產市場。(Lindsay, 2019)</p>
 <p>洗黑錢的最佳方法之一是通過賭場或在大城市購買房地產，因為他們既接受大量現金交易，又毋須任何審批程序。加拿大BC省政府因為發現大量的毒品和其他非法資金通過加拿大的賭場及房地產市場洗黑錢，因此，司法部長委託專家就洗黑錢問題進行調查及研究。</p>
 <p>報告把87處列為高危地區，這些高危地區的買家合共持有3,127間房屋，報告把香港列為高危地區之首，因為在這些成交中，香港和中國是最高比例的境外房產持有人或機構的地區，分別持有1,345及774間房屋，2019年的估值分別為20.1億及9.4億加元，佔全部高危地區業主貨值的47.7%及22.2%於，兩地已佔7成；另有473間房屋的買家是來自離岸金融中心及稅務天堂 (表1)。</p>
+<img src="https://images.vocus.cc/70de551c-446f-4bbd-9394-c9b2ed362eab.png" alt="表1 加拿大BC省首十名高危地區買家來源地、房地產數量及金額。來源：German (2019)">
 <p>表1 加拿大BC省首十名高危地區買家來源地、房地產數量及金額。來源：German (2019)</p>
 <p>報告點名指香港作為「離岸銀行及金融中心及全球空殼公司中心」，加上大量專業服務令香港成為「大量貿易為本的洗黑錢管道」。事實上，香港在全球的外來資金投資金額方面一直排名極高，去年排名第四，僅在美國、中國、英國之後，去年的金額高達1120億美元，而最主要的外來資金來源正是離岸公司，包括英屬維爾京群島，詳情可參考我的文章 (姚松炎，2019)。</p>
 <p>事實上，香港的洗黑錢活動一直在加劇。圖2顯示2013-2019年（截至3月）的可疑交易報告（STR）宗數，從2013年的約30,000宗，上升至2017年的90,000多宗。被定罪的人數穩定在每100人約1人定罪。如圖3所示，2018年涉及的金額增加到78億港元（10億美元）。考慮到這些只是被定罪的凍結金額，這數字可能只代表冰山一角。 </p>
+<img src="https://images.vocus.cc/bfb06b2a-cc29-4242-9044-ca3027f7bf3e.jpg" alt="圖2 2013-2019（截至3月）的可疑交易報告（STR）數量。資料來源：JFIU（2019）">
 <p>圖2 2013-2019（截至3月）的可疑交易報告（STR）數量。資料來源：JFIU（2019）</p>
+<img src="https://images.vocus.cc/b7d99f58-53a1-4ad6-915a-40183670f5c2.jpg" alt="圖3 被定罪人數及被凍結資產值（港元）。資料來源：JFIU（2019）">
 <p>圖3 被定罪人數及被凍結資產值（港元）。資料來源：JFIU（2019）</p>
 <p>但JFIU（2019）報告指出，只有約6％的可疑交易報告與房地產有關，這似乎遠遠低於加拿大的比例，相反最主要的可疑交易反而集中在銀行，但報告未有提供詳情。(圖4)</p>
-<p>圖4 在香港2017年與洗黑錢相關的行業及接獲舉報宗數。資料來源：JFIU（2019） </p>
+<img src="https://images.vocus.cc/f991a849-177b-4fea-952b-48721ef941dd.jpg" alt="圖4 在香港2017年與洗黑錢相關的行業及接獲舉報宗數。資料來源：JFIU（2019）">
+<p>圖4 在香港2017年與洗黑錢相關的行業及接獲舉報宗數。資料來源：JFIU（2019）</p>
 <p>香港屬開放形經濟，有利國際洗黑錢集團以此作為洗黑錢的基地，雖然有洗黑錢相關條例，但基本上允許資金自由流動，稅制簡單而且稅率低，並歡迎來自離岸公司的資金。有理由相信香港的房地產價格亦應與洗黑錢有關。不幸的是，香港政府目前尚未有像加拿大BC省政府一樣，就洗黑錢對香港房地產價格影響進行調查。</p>
 <p>References</p>
 <p>German, P.M. (2019) Dirty Money — Part 2, Turning the Tide — An Independent Review of Money Laundering in B.C. Real Estate, Luxury Vehicle Sales & Horse Racing, B.C. Canada. <a href="https://news.gov.bc.ca/files/Dirty_Money_Report_Part_2.pdf">https://news.gov.bc.ca/files/Dirty_Money_Report_Part_2.pdf</a></p>
 <p>JFIU (2019) Statistics, Joint Financial Intelligence Unit, HKSAR Government. <a href="https://www.jfiu.gov.hk/en/">https://www.jfiu.gov.hk/en/</a></p>
 <p>Lindsay, B. (2019) Money laundering funded $5.3B in B.C. real estate purchases in 2018, report reveals, May 10, CBC. <a href="https://www.cbc.ca/news/canada/british-columbia/laundered-money-bc-real-estate-1.5128769?fbclid=IwAR1d1VCbo5vjKUEHl-6utm-zpERCN2TGJK8ovnE463lA_r25_pSKwkz810E">https://www.cbc.ca/news/canada/british-columbia/laundered-money-bc-real-estate-1.5128769?fbclid=IwAR1d1VCbo5vjKUEHl-6utm-zpERCN2TGJK8ovnE463lA_r25_pSKwkz810E</a>, A youtube at <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fyoutu.be%2FUBQHXjL4lSE%3Ffbclid%3DIwAR22V-xbbslNSL0c4_4mA35QDUqzJwLIBkCyR1K3FxgYE3_LhLCmrpZOfBc&h=AT1aX-nrZly9RW5IIle_b6CNYHJrreaA2nNznIF_j6mPWW-MEXgEktmBhof2rQcclJP7AAABrddTCjKj7lvk0bjMnFkTO5fv21fAC0iWuWOHWSuyaE85MmXV0SdoV_MEeWn7E19W7RTXaX74x6jon_eCWNhPxU5ewWpaKPgM7fGlf1qzcv5fD9yxgojkB4AX1EvmqXzxUOSCRpka_wj058bVKYqrHWZPBkjC2-ID9WLZlBlXgzvE8Hlj-Vk8ck5Bf0vVA4mRdr27lV1FJx3xfBT-taPxS0mTqlvas1_H46VjcFdSMHBNXscKdRSihnF_TTz4pNnheR8a8saiItIW86drlmBpz5ZWbu8twTIBN9_nzwZx8kiC1IeEENlsB-JjRT7cfpDgdCg5QU3aqMwVabWYyvy6Kl713cszvORUiKbkqLo0OKSjQI9JCRnxWZhIF7w9R5y_xPlFBjhHxKJ3ZHiuUctGcVF0zuPWbK8hTMusg7sQhtqIpQY_WoYXthE0p10LOqn3XX66BhjkGZ1k6E1wBpMESrGTxzGhipLOhgbPBcSPqgKAITAqZRsD-Rz_sPnX5XKNf5Y-EUK4fdG8e-6V2vradjV3AWGFN65ptQbQXIabYOAN6GrvzcBIDOrqBuy5kbiX-ZFQ">https://youtu.be/UBQHXjL4lSE</a> [Expert Panel on Money Laundering in BC Real Estate (2019) Combatting Money Laundering in BC Real Estate, Mar 31, Minister of Finance and Deputy Premier, B.C., Canada. <a href="https://news.gov.bc.ca/files/Combatting_Money_Laundering_Report.pdf">https://news.gov.bc.ca/files/Combatting_Money_Laundering_Report.pdf</a>]</p>
 <p>Yiu, C.Y. (2019) Foreign Direct Investment Inflows to Hong Kong in 2018 ranks the 4th highest in the World, Feb. 28, Medium. <a href="https://medium.com/@edwardyiu/foreign-direct-investment-inflows-to-hong-kong-in-2019-ranks-the-4th-highest-in-the-world-8b1c0cfb4abb">https://medium.com/@edwardyiu/foreign-direct-investment-inflows-to-hong-kong-in-2019-ranks-the-4th-highest-in-the-world-8b1c0cfb4abb</a></p>
-<p><br></p>
