--- a/_posts/2019-05-25-VOCUS-美中全面開戰對香港經濟影響的預測.html
+++ b/_posts/2019-05-25-VOCUS-美中全面開戰對香港經濟影響的預測.html
@@ -10,6 +10,7 @@ author: REDBRIC
 
 <p>美中全面開戰，不但「貿易戰」進入第二階段，「引渡逃犯戰」亦已進入劍拔弩張的地步，香港作為高度國際化的細小經濟體，以資金自由流動及與美元聯繫匯率確保匯率穩定，而又高度依賴中國的進出口貿易業務及各類專業服務需求、事實上香港是活在兩大國的夾縫中，兩國開戰，香港無可避免成為磨心，近年的事態發展充分反映這一事實，然而大家較少把這幾項相關的政經事件一併分析。</p>
 <p>2017年香港前局長何志平在美國被補，控以賄賂聯合國前官員罪，今年美國法院正式判處他入獄，可視為美中開戰的前哨戰。[1] </p>
+<img src="https://images.vocus.cc/a0b88c8a-a5d7-4070-a871-9cee0ba1c531.png" alt="圖1 2019年5月7日美國USCC高調發表反對修例聲明。https://www.uscc.gov/sites/default/files/Research/USCC%20Issue%20Brief_HK%20Extradition%20Bill.pdf">
 <p>圖1 2019年5月7日美國USCC高調發表反對修例聲明。https://www.uscc.gov/sites/default/files/Research/USCC%20Issue%20Brief_HK%20Extradition%20Bill.pdf</p>
 <p>2018年美國國會就《美港政策法檢討報告2018》指出美方向港方要求引渡逃犯，但港府拒絕，理由是逃犯須先交予中國，自此兩國的引渡衝突正式公開，亦把香港捲入漩渦。其後美國向加拿大要求引渡華為的孟晚舟，中國隨即在內地拘捕最少兩名加拿大人，引渡戰正式爆發。同一時間，香港政府突然提出修訂逃犯條例令所有在港人士均可引渡回中國內地受審，港府不惜破壞香港立法會的審議法例制度，亦要在7月前通過修訂，背後明顯與兩國的引渡戰有關。[2] 今年5月7日美國USCC高調發表反對修例聲明，中國國家領導人隨即發表支持香港政府修例，雙方的引渡戰更呈白熱化。[3]</p>
 <p>而華為事件其實可以追索到更早的中興案，早在2016年3月，美國商務部對中興通訊施行出口限制，因為中興涉嫌違反美國對伊朗的出口管制政策，調查中揭發華為事件，令兩國對高科技的知識版權保障及出口管制出現前所未有的敵對狀態。而中興/華為案有資料顯示案件與香港的公司有關，反映香港一直有參與違反聯合國及美國制裁令，更加可能利用美港政策法下香港享有輸入高科技產品的優惠，成為中國的「白手套」。[4]</p>
@@ -18,6 +19,7 @@ author: REDBRIC
 <p>除了貿易金額受損外，一旦《逃犯(修訂)條例》通過，即使大家真心相信條例只針對罪犯，修訂仍會對香港的經濟帶來重大打擊，因為逃犯條例會同時令到內地走資來港的熱錢隨時被凍結或被充公，商界稱為逃錢條例，因此相信修訂後會即時令熱錢泊港減少，但金額難以估計。根據金管局的數據，2008年後新增的來港熱錢超過一萬億港元，最近開始流走，至今已走資超過一千億元，未知有幾多與修訂有關。若果根據加拿大BC省司法部的洗黑錢報告，去年有高達470億至1500億加元與加國洗黑錢活動有關，報告亦點名指出香港是其中一處重要的黑錢來源 [7]，而且香港在外來直接投資金額比加拿大高得多，香港位居全球第四高，僅次於美國、中國、英國，金額高達一年1120億美元。[8] 因此，估計逃犯條例修訂對留港資金會帶來不少於470億加元的減少。</p>
 <p>最後，由於逃犯條例的修訂，美國國會議員已經發表可能啟動取消《美港政策法》的想法，相信這將是兩國交鋒進一步影響香港的戰場，一旦取消美港政策法，香港的國際化優勢將一去不返，失去特別關稅區地位及失去輸入高科技優惠，對香港經濟的影響將難以估量。而下一個戰場將可能是美國啟動《美國-香港人權與民主法案》的立法程序，法案目的是「美方對涉及鎮壓香港基本自由的香港或中國大陸政府官員，設立懲罰機制，包括禁止涉事官員入境美國及凍結其在美國資產。」(圖2)</p>
 <p>全球局勢，政經互動，貿易戰與引渡戰互為因果，逃犯法與政策法兵凶戰危。</p>
+<img src="https://images.vocus.cc/62e4264b-142f-4be9-9032-5c856ef79f35.jpg" alt="圖2 近年7項政經事件揭示美中角力把香港推上戰車。">
 <p>圖2 近年7項政經事件揭示美中角力把香港推上戰車。</p>
 <p>#美中貿易戰 #美港政策法 #美港人權與民主法案 #何志平 #孟晚舟 #中興 #華為 #逃犯條例修訂</p>
 <p>參考：</p>
