--- a/_posts/2019-07-27-VOCUS-逃犯條例修訂事件時序3-5月.html
+++ b/_posts/2019-07-27-VOCUS-逃犯條例修訂事件時序3-5月.html
@@ -9,7 +9,7 @@ author: REDBRIC
 ---
 
 <p>20190609 民陣反送中大遊行，參與人數?十萬人</p>
-<p><br></p>
+<img src="https://images.vocus.cc/f276c40d-a0cf-442b-a437-8cb4fad02e03.jpg">
 <p>20190524 美國CECC委員致函香港特首要求撤回逃犯條例修訂</p>
 <p>20190524 歐盟向香港政府發出外交照會，抗議逃犯條例修訂</p>
 <p>20190524 立法會內委會通過解散法案委員會，直上大會二讀</p>
@@ -25,10 +25,3 @@ author: REDBRIC
 <p>20190403 立法會首讀《2019 年逃犯及刑事事宜相互法律協助法例 ( 修訂 ) 條例草案》</p>
 <p>20190326 行政長官會同行政會議通過向立法會提交《2019年逃犯及刑事事宜相互法律協助法例（修訂）條例草案》。條例草案將於三月二十九日（星期五）在憲報刊登。新聞公告指條例草案的目的是處理發生在台灣的謀殺案，同時堵塞香港整體刑事事宜的協作制度的漏洞。</p>
 <p>#逃犯條例 #直上大會</p>
-<p><br></p>
-<p><br></p>
-<p><br></p>
-<p><br></p>
-<p><br></p>
-<p><br></p>
-<p><br></p>
