--- a/_posts/2022-04-23-PQ-中國紫光集團捲土重來-四大破口侵蝕護國神山.html
+++ b/_posts/2022-04-23-PQ-中國紫光集團捲土重來-四大破口侵蝕護國神山.html
@@ -56,6 +56,10 @@ author: 麥聊
 
 
 
+<p>（更新：行政院經濟部已於 2022 年 4 月 21 日公布修正：<a href="https://gazette.nat.gov.tw/egFront/detail.do?metaid=131583&amp;log=detailLog" target="_blank" rel="noreferrer noopener">在大陸地區從事投資或技術合作許可辦法第 5 條、第 10 條文</a>）</p>
+
+
+
 <p><strong>第二個破口在港澳等地區。</strong>中國資金包裝成香港資金或是其他外資，再來台投資機敏產業，但我們的法規卻無法應對這種「鑽漏洞」的規避行為。經濟部針對〈<a href="https://law.moj.gov.tw/LawClass/LawAll.aspx?pcode=Q0040015">大陸地區人民來臺投資許可辦法</a>〉<strong>修正幅度不夠</strong>，仍要求台灣官員自行證明中資對第三地投資有「控制力」。</p>
 
 
