Update VOCUS 2022-04-24 patch

--- a/_posts/2018-12-19-VOCUS-從巴黎cop21到波蘭cop24的全球氣候變化會議.html
+++ b/_posts/2018-12-19-VOCUS-從巴黎cop21到波蘭cop24的全球氣候變化會議.html
@@ -11,15 +11,18 @@ author: REDBRIC
 <p>全球暖化問題日漸惡化，對上一次的全球減少碳排放目標協議已經要追到1997年12月簽訂的《京都議定書》，該協議的終結年份為2020年，但全球暖化問題不但沒有解決，反而迫在眉睫、刻不容緩！因此各國在過去幾年努力準備2020年可重訂更有效的目標。</p>
 <p>其中最廣為人知是三年前在巴黎舉行的全球氣候變化會議(簡稱COP21)，參與國同意努力把全球平均氣溫升幅控制在工業化前水平以上低於1.5℃之內，但並沒有制定任何減碳目標，仍沒有釐訂監察規則，各成員只須自行制定自己的所謂貢獻 (Nationally Determined Contribution, NDC)，令到部份成員(包括中國和香港)採用碳強度指標 (Carbon Intensity)，變相可以透過增加生產總值來免除減少絕對值的碳排放。</p>
 <p>事實上，香港在2016年的碳排放絕對值比1997年的碳排放量不但沒有下降，反而由大約一年3400萬噸上升至4200萬噸，上升了23% (圖1)，人均的碳排放量仍有5.7噸，比政府的2030年目標3.3-3.8噸相差甚遠。而香港本身作為國際城市組織C40的成員，組織的減排目標為每年人均碳排放量2噸，但香港政府的目標比C40的目標高出差不多一倍。若把政府的減碳強度目標換算為絕對值減碳排放量，目標只在2030年減少碳排放量26% - 36%，遠低於聯合國專家建議的50%。(圖2)</p>
+<img src="https://images.vocus.cc/a9809111-a320-4f81-91cc-9f2ad9892d75.jpg" alt="圖1 香港的溫室氣體排放量1990 - 2016。來源：香港01 (2018) [1]">
 <p>圖1 香港的溫室氣體排放量1990 - 2016。來源：香港01 (2018) [1]</p>
+<img src="https://images.vocus.cc/bce86b35-5f04-40e1-9876-a5c8cd656763.png" alt="圖2 香港的減排目標。來源：根據環保局 (2017) 資料製表 [2]">
 <p>圖2 香港的減排目標。來源：根據環保局 (2017) 資料製表 [2]</p>
 <p>今年全球百多個國家代表再在波蘭召開COP24會議，而且預先由聯合國專家團隊為會議準備了一份特別報告 IPCC (2018) [3]，簡報現時全球氣溫變化的狀況及未來估算。報告警告人類必須在2030年前減少碳排放一半，並在2050年達成零碳排目標，才有望控制氣溫上升超過1.5°C。若不能大幅減少碳排放，依照目前的排放趨勢，暖化升溫預計在2030至2052年間便會超過1.5度。(圖3)</p>
+<img src="https://images.vocus.cc/c2deaf18-9bb5-48a1-a81c-b7c918218fab.png" alt="圖3 全球氣溫上升趨勢；若不能大幅減少碳排放，依照目前的排放趨勢，暖化升溫預計在2030至2052年間便會超過1.5度。來源：IPCC (2018) [3]">
 <p>圖3 全球氣溫上升趨勢；若不能大幅減少碳排放，依照目前的排放趨勢，暖化升溫預計在2030至2052年間便會超過1.5度。來源：IPCC (2018) [3]</p>
 <p>可惜，部份與會國傳出反對專家報告的消息，尤其是石油生產國。最終COP24所達成的協議主要是同意有關如何量度和報告碳排放水平 (Rulebook)，並沒有實質減排目標訂定，似乎各國都把時間表推到2020年的限期，而且形勢愈來愈不妙，部份國家已退出京都議定書，在經濟衰退的前景下，對減少使用化石能顯得更加不願投資新設備。若2020年全球未能達成更有效的減排目標，氣候變化災難將無可避免，不但更常出現風災水災，更會對生態平衡帶來災難，打擊經濟環節及引致更多與氣候相關的疾病和死亡。(圖3)</p>
 <p>香港政府的如意算盤是把燃煤發電改為天然氣發電就能在很大程度上達到政府訂下的目標，相比周邊的城市改用可再生能源的發電比例，香港是嚴重落後。根據Paris Watch (2018) 資料，香港現時的可再生能源僅佔整體能源消耗的1%至2%，而香港政府預測2030年的可再生能源潛力僅佔3%至4%，比廣州和深圳的目標低12-15倍。(圖4)</p>
+<img src="https://images.vocus.cc/1ddd9078-1f08-4d3f-a43e-36f7fb19459a.png" alt="圖4 亞洲城市的可再生能源佔總能源消耗比例的現狀及目標。來源：明報引述 Paris Watch (2018) [4]">
 <p>圖4 亞洲城市的可再生能源佔總能源消耗比例的現狀及目標。來源：明報引述 Paris Watch (2018) [4]</p>
 <p>[亦可瀏覽FB LIVE: https://www.facebook.com/chuhoidick/videos/218133415641250/]</p>
-<p><br></p>
 <p>[1] 香港01 (2018) 本港2016年溫室氣體排放量按年升0.5%　人均碳排放量維持5.7公噸，8月31日。https://www.hk01.com/%E7%A4%BE%E6%9C%83%E6%96%B0%E8%81%9E/229791/%E6%9C%AC%E6%B8%AF2016%E5%B9%B4%E6%BA%AB%E5%AE%A4%E6%B0%A3%E9%AB%94%E6%8E%92%E6%94%BE%E9%87%8F%E6%8C%89%E5%B9%B4%E5%8D%870-5-%E4%BA%BA%E5%9D%87%E7%A2%B3%E6%8E%92%E6%94%BE%E9%87%8F%E7%B6%AD%E6%8C%815-7%E5%85%AC%E5%99%B8</p>
 <p>[2] 環保局 (2017) 香港氣候行動藍圖2030+，香港政府。https://www.climateready.gov.hk/files/report/tc/HK_Climate_Action_Plan_2030+_booklet_Chin.pdf</p>
 <p>[3] IPCC (2018) global warming of 1.5°C, https://report.ipcc.ch/sr15/pdf/sr15_spm_final.pdf</p>
