--- a/_posts/2019-05-29-VOCUS-一家公司擁有22伙住宅-香港房屋供應怎可能足夠.html
+++ b/_posts/2019-05-29-VOCUS-一家公司擁有22伙住宅-香港房屋供應怎可能足夠.html
@@ -9,6 +9,7 @@ author: REDBRIC
 ---
 
 <p>上星期有傳媒報導，中資公司華為在香港持有22伙住宅 [1]，不禁令港人明白香港房屋的所謂供應不足是甚麼意思！事實上早在前年英國皇家測量師學會已經報導，中資來港投資房地產的金額在2015年已高達41.2億美元 (約320億港元)，世界排行第三高，僅次於美國和澳洲。[2] 至2017年再上升至413億港元，上升29%。[3] 其中可能包括買地、買寫字樓和買舖等房地產，但從報導可見有不少中資資金大量購買住宅，而且並非幾千尺單幢屋式的豪宅，而是直接與民爭房的多層式中小型住宅單位 (如一家公司擁有18個大角嘴維港灣單位)。</p>
+<img src="https://images.vocus.cc/cd21c2d0-80d4-4b7a-b4c3-e79b413840fa.jpg" alt="大角嘴維港灣">
 <p>大角嘴維港灣</p>
 <p>事實上，已有研究發現，自2010年11月政府首次推行額外印花稅至今年5月底，已有最少126宗涉及公司名義持有物業，而其公司董事或股東透過轉換股權，令住宅實際擁有權轉移到新股東手上，但新股東不需要支付高達30%物業印花稅，只需要支付0.2%股票轉讓印花稅。[4] 相關漏洞吸引更多資金以公司名義買入香港房產。</p>
 <p>除了公司買樓令香港房屋供應假不足外，有不少擁有利益衝突和內幕消息的政府官員同樣擁有多項物業，或涉及多宗住宅買賣成交。包括有報導指現任政務司司長張建宗申報持有9個香港物業、創科局長楊偉雄則持有10個物業。[5] 即使中級官員同樣不顧利益衝突，大量從事住宅物業買賣，其中近年最驚人，而且涉貪的馮馮案：時任民政事務局常任秘書長馮程淑儀及其夫馮永業(時任經濟發展及勞工局副秘書長)兩人及持有公司曾先後進行最少十宗物業買賣；其中馮永業接受買家51萬元，作為他購買羅便臣道豪宅的訂金，但實際上該買家正在向政府投標港澳直升機場專營權。[6]</p>
@@ -16,7 +17,6 @@ author: REDBRIC
 <p>當然，如果大家視房產為可炒賣商品，一人或一家公司擁有多伙住宅，無可厚非。但當政府高調批評反對填海的市民是造成劏房問題和公屋輪候時間延長的原因，則屬諉過於人，混淆視聽。</p>
 <p>尤其是當政府堅持認為香港樓價居高不下的主因是房屋供應不足，那麼縱容一人或一家公司擁有多伙住宅，變相容許囤積居奇，豈不成為直接導致樓價上升的元兇？政府卻坐視不理，反而玩埋一份！</p>
 <p>似乎在如香港這樣細小的自由經濟體，唯有把市民的住屋與非住屋需要分開兩個市場，有點像新加坡的組屋和私樓的分別，政府向超過8成的市民提供可負擔組屋，一家人只可擁有一套房，不可用公司名義購買；餘下少於2成的住宅單位在私樓市場供應，可供本地或非本地人士或公司購買。</p>
-<p><br></p>
 <p>[1]華為由2003年起入貨，先購入大角嘴維港灣四個高層相連單位，2004再買入餘下同層兩個單位，同年再連掃同座另外兩層所有單位，總共購入18個單位。參考蘋果日報 (2018) 港擁22單位值3億，12月7日。https://hk.news.appledaily.com/local/daily/article/20181207/20563424</p>
 <p>[2] 英國皇家測量師學會 RICS (2016) Modus 6月。</p>
 <p>[3] 經濟日報 (2017) 高力國際：中資去年港物業投資涉413億，4月26日。　https://ps.hket.com/article/1794789/%E9%AB%98%E5%8A%9B%E5%9C%8B%E9%9A%9B%EF%BC%9A%E4%B8%AD%E8%B3%87%E5%8E%BB%E5%B9%B4%E6%B8%AF%E7%89%A9%E6%A5%AD%E6%8A%95%E8%B3%87%E6%B6%89413%E5%84%84%E3%80%80</p>
