--- a/_posts/2019-05-29-VOCUS-沙中線紅磡站鋼筋扭入螺絲帽已發現最少9-不及格.html
+++ b/_posts/2019-05-29-VOCUS-沙中線紅磡站鋼筋扭入螺絲帽已發現最少9-不及格.html
@@ -10,14 +10,15 @@ author: REDBRIC
 
 <p>日前運房局表示『位於東西走廊B區的月台層板位置，開鑿後....檢視3枝鋼筋螺絲帽均外露超過兩個扭紋，不符合...標準。』[1]，這是根據港鐵 (2018) 一份稱為《檢驗建議書》[2] 的抽驗初步結果。</p>
 <p>檢驗建議書提出鑿開石屎檢查分為兩大目的：1. 核實記錄的可靠性；2. 評估手工。而目的2又分為東西走廊 EWL 及南北走廊 NSL。為第二目的而鑿開石屎的建議，在東西走廊的月台層 (EWL) 鑿開28處位置，共檢視最少84個螺絲帽 (表1)，區域包括Area Ａ, HKC, Area B, Area C。今次正是首處開鑿東西走廊(EWL)B區的月台層板位置，每處可檢驗3支鋼筋，而「首個開鑿位置外露的3個螺絲頭扭入螺絲帽的長度分別為29毫米、34毫米及34毫米」，據了解絞牙扭入螺絲帽的長度標準應該是40毫米。[1]</p>
+<img src="https://images.vocus.cc/787175f3-8dfc-4d11-a3fb-e9eb574c8185.png" alt="表1 東西走廊的月台層 (EWL) 鑿開28處位置，共檢視最少84個螺絲帽。來源：[2]">
 <p>表1 東西走廊的月台層 (EWL) 鑿開28處位置，共檢視最少84個螺絲帽。來源：[2]</p>
 <p>根據港鐵(2018)《檢驗建議書》的表6.3，若在84支鋼筋中發現3支不及格，代表整體鋼筋的不及格比率達到9.0%。(表2) 如果全部鋼筋螺絲帽數量為2.6萬個，即現時已初步發現大約有2340支鋼筋扭入螺絲帽不及格，情況令人憂慮。然而，檢驗建議書並未訂下須要採取補救行動的指標，我曾提出以10%作為界線，似乎現時已經非常接近這一界線，政府必須向公眾說明一旦超過一成不及格的補救方案。[3]</p>
+<img src="https://images.vocus.cc/9bf3ad29-238c-4f59-97eb-40d92bdf2a3b.png" alt="表2 檢查結果在統計學的含意。來源：[2]">
 <p>表2 檢查結果在統計學的含意。來源：[2]</p>
 <p>處理辦法一般可分為加固或重建，但建議書並未清楚說明在甚麼情況下已不能加固，必須重建。由於連續牆與層板是車站的最主要結構部件之二，日後列車不停在層板上行走，兩部件所承托的負荷和震盪非常巨大，兩部件的加固辦法非常有限，亦難以令公眾安心。必須注意，抽樣檢驗結果推算整體情況不竟只是基於統計學，今次鑿開檢驗的樣板數量只佔總數的1%不到，所能得出的結果的可靠度非常有限，沒有鑿開的鋼板螺絲帽可能有更加嚴重和難以想像的造假情況，把84個樣本的結果去推算全部螺絲帽的情況和承托力有相當高的風險。</p>
 <p>可惜，港鐵仍然認為這3支鋼筋沒有完全扭入螺絲帽不代表無效，含意是它們仍有低於設計的尚餘承托力，但沒有交代這是否及格[4]；然而沒有鑿開檢驗的鋼筋螺絲帽可能扭入得更少或甚至完全沒有扭入，實在難以根據樣本的不及格程度來推算其餘的鋼筋螺絲帽即使不及格的尚餘承托力。事實上，港鐵(2018)的檢驗建議書也沒有提出計算剩餘承托力的驗收標準，相反建議書只以及格與不及格(failure)來區分，這是建議書的抽樣檢驗所根據的統計方法，否則可能需要100%鑿開檢驗。</p>
 <p>尤記得發生在2000年的短樁案，房署在勘察沙田愉翠苑後證實兩幢樓宇嚴重短樁；其後廉署拘捕8名涉案人士，政府最終決定為挽回公眾對工程的信心，決定拆卸兩幢樓宇重建！[5] 今次沙中線紅磡站不但令公眾對沙中線工程失去信心，連政府都對港鐵管理層失去信心，就港鐵報告造假事件報警，及迫令港鐵四名高層辭職！[6]</p>
 <p>事實上，除了沙中線紅磡站有發現造假問題外，土瓜灣站和灣仔會展站亦同樣發現沉降問題，而且承建商也有重疊，相信兩站有更多工程品質問題，一點也不出奇。隨著紅磡站證實有工程品質和管理問題，政府必須擴大檢驗範圍至其他各站，以確保公眾安全，挽回公眾信心。</p>
-<p><br></p>
 <p>[1] 香港01 (2018)【沙中線】驗3枝鋼筋均不達標，12月20日。https://www.hk01.com/%E7%A4%BE%E6%9C%83%E6%96%B0%E8%81%9E/273349/%E6%B2%99%E4%B8%AD%E7%B7%9A-%E9%A9%973%E6%9E%9D%E9%8B%BC%E7%AD%8B%E5%9D%87%E4%B8%8D%E9%81%94%E6%A8%99-%E7%94%B0%E5%8C%97%E8%BE%B0-%E8%8B%A5%E7%99%BE%E7%99%BC%E7%99%BE%E4%B8%AD%E6%88%96%E6%9C%89%E6%8B%86%E7%AB%99%E5%8D%B1%E6%A9%9F</p>
 <p>[2] 立法會 (2018) 港鐵 2018：Shatin to Central Link - A Holistic Proposal for Verification & Assurance of As-constructed Conditions and Workmanship Quality of the Hung Hom Station Extension (East West Line Platform Slab, North South Line Platform Slab and the Connecting Diaphragm Walls) Rev. B，沙田至中環線工程的最新進展，CB(4)292/18-19(01)，https://www.legco.gov.hk/yr18-19/chinese/panels/tp/tp_rdp/papers/tp_rdp20181207cb4-292-1-c.pdf</p>
 <p>[3] 姚松炎 (2018) 沙中線紅磡站鑿開石屎檢查的港鐵建議，12月7日。https://vocus.cc/@ecyY/5c09e647fd89780001ec282c</p>
