--- a/_posts/2019-05-29-VOCUS-沙中線紅磡站鑿開石屎檢查的港鐵建議.html
+++ b/_posts/2019-05-29-VOCUS-沙中線紅磡站鑿開石屎檢查的港鐵建議.html
@@ -11,29 +11,35 @@ author: REDBRIC
 <p>立法會鐵路事宜小組開會，政府今日才提交一份30頁(未計附件)(只有英文版)的文件[1]，港鐵就沙中線紅磡站的全面評估策略提出建議，包括鑿開石屎檢查的方法，並獲政府接納。</p>
 <p>報導指鑿開80個位置並不正確 [2]，首先，鑿開石屎檢查分為兩大目的：1. 核實記錄的可靠性；2. 評估手工。而目的2又分為東西走廊 EWL 及南北走廊 NSL。</p>
 <p>港鐵建議為目的1在Areas B, C鑿開連續牆與東西走廊月台層板接駁位24處檢查，原因是考證三類鋼筋連接層板和連續牆的設計 (表1)：</p>
+<img src="https://images.vocus.cc/11818fa5-55d0-4aeb-80d8-3a8aabcae1ac.png" alt="表1 目的1鑿開石屎檢查建議 [1]">
 <p>表1 目的1鑿開石屎檢查建議 [1]</p>
 <p>所謂的三類鋼筋連接方法，可參考下圖2a,b,c，這是造假事件的核心之一，到底螺絲帽是否仍然存在 (圖2a)，連續牆是否有削矮至影響部份頂鐵 (圖2b)，或甚至削矮至層板全頂鐵 (圖2c)?</p>
+<img src="https://images.vocus.cc/48347e31-9f4a-419f-a879-94e5919dd86b.png" alt="圖2a 第一類沒有削矮連續牆 [1]">
 <p>圖2a 第一類沒有削矮連續牆 [1]</p>
+<img src="https://images.vocus.cc/aae6f93c-89af-4d87-81cd-a58e137d7037.png" alt="圖2b 第二類：削矮連續牆至頂層鐵 [1]">
 <p>圖2b 第二類：削矮連續牆至頂層鐵 [1]</p>
+<img src="https://images.vocus.cc/bcd049d8-555a-4ca5-98fd-a7becdc448e4.png" alt="圖2c 第三類：削矮連續牆至底鐵 [1]">
 <p>圖2c 第三類：削矮連續牆至底鐵 [1]</p>
 <p>事實上，昨日的聆訊發現總承建商的工程師與港鐵的工程師對有沒有削矮連續牆有不同的版本，港鐵工程師的供詞是檢查連續牆時有螺絲帽，含意是連續牆沒有被削矮[3]：</p>
 <p>『Pennicott又質疑，關在證人供詞聲稱部分位置的連續牆仍然使用螺絲帽接駁是否屬實。關表示，準備供詞時有參考過港鐵連續牆竣工圖則和當時工地相片。Pennicott即拿出紮鐵分判商泛迅製作的圖則，又引述泛迅負責人潘偉山的證供，指有關位置已由原本的螺絲帽接駁改為以全條連續鋼筋取代。關指從未看過相關圖則，不能評論。』[3]</p>
 <p>至於為第二目的而鑿開石屎的建議，報告是建議在東西走廊的月台層 (EWL) 鑿開28處位置，共檢視最少84個螺絲帽 (表3)。區域包括Area Ａ, HKC, Area B, Area C.</p>
+<img src="https://images.vocus.cc/f4ce1f88-854b-4808-ac29-5294d03a4f57.png" alt="表3 目的2鑿開石屎數量 [1]">
 <p>表3 目的2鑿開石屎數量 [1]</p>
 <p>文件沒有寫清楚計算樣本數量的方程式，亦沒有寫清楚多少不合格數量會接受。但根據文件提供的表6.3，似乎是以全部不多於10%有問題螺絲帽作為接受與否的標準，從26000多個螺絲帽中，隨機抽取84個樣本，如果當中只發現4個或以下有問題則在統計學上(以95%Confidence Level)表示全部26000多個螺絲帽會有問題的不會多於10.6%，是否意指即使一成(約2600個螺絲帽)有問題政府仍會接受？理據為何？(表4)：</p>
+<img src="https://images.vocus.cc/f4763a50-be1b-43cb-96fe-c81b3ba61847.png" alt="表4 檢查結果在統計學的含意 [1]">
 <p>表4 檢查結果在統計學的含意 [1]</p>
 <p>就隨機抽樣的方法也有特別處理，首先是分兩級抽樣制，先抽區 (site)，後抽位置 (layer)，而由於目的是與螺絲帽有關，所以即使抽到Layer 3，位於Layers 1 & 2的6個螺絲帽位置也會鑿開 (圖5)，因此，真正會鑿開的位置可能會遠高於24處。</p>
-<p>圖5 隨機抽樣方法，先抽區，後抽位置 [1] </p>
+<img src="https://images.vocus.cc/cf2ca493-9753-4f46-be69-6457dd3ee2b5.png" alt="圖5 隨機抽樣方法，先抽區，後抽位置 [1]">
+<p>圖5 隨機抽樣方法，先抽區，後抽位置 [1]</p>
 <p>除了檢測EWL，亦會同樣鑿開南北走廊(NSL)的月台層板及連續牆位置，因此抽樣數量乘二，即目的2合共是抽56個位，共檢驗最少168個螺絲帽。EWL及NSL位置可參考圖6 紅磡站的大切面圖 (向南)，顯示沙中線紅磡站與現時紅磡站的位置，圖7是沙中線紅磡站的EWL和NSL兩層月台的切面圖 (向北)。</p>
+<img src="https://images.vocus.cc/8598eb28-c91c-41cd-9205-f229d4cb3edb.png" alt="圖6 沙中線紅磡站大切面圖 (向南) [1]">
 <p>圖6 沙中線紅磡站大切面圖 (向南) [1]</p>
+<img src="https://images.vocus.cc/4a34db14-a547-431b-856b-cd0bb0b5cbe7.png" alt="圖7 沙中線紅磡站東西走廊與南北走廊月台層切面圖 (向北) [1]">
 <p>圖7 沙中線紅磡站東西走廊與南北走廊月台層切面圖 (向北) [1]</p>
 <p>其中有關連續牆向月台層板的接駁位是一幅非常厚的石屎，EWL有3米厚，而NSL有2米厚，連續牆1.2米厚；文件未有說明如何在3米厚層板內鑿開石屎，亦沒有交代最近發現EWL板底內鋼筋的剪切桿 (Shear Links) 與設計不符的檢測方法，而且再有新缺憾發現，文件稱為 『incomplete infill between columns and walls against the soffit』(para 2.3)，亦沒有交代如何檢測其他位置。而由於NSL坐在「地上」，文件指層板底部難以檢測，而且螺絲桿是否扭入螺絲帽也不可能扭出來檢查，以免影響結構，因此文件提出多種不同的非破壞性檢測方法 (表6)，但關於這些方法的準確度，文件也未有交代。</p>
+<img src="https://images.vocus.cc/8c6c0223-56f3-49cb-9b63-cfcd818ca0f0.png" alt="表8 應用非破壞性檢測方法 [1]">
 <p>表8 應用非破壞性檢測方法 [1]</p>
 <p>附件中時間線分為目的1先行，需時5星期，目的2中有關EWL的檢測同期展開，需時12星期，目的2中有關NSL的檢測在第3星期展開，需時12星期，維修復原需時14星期，全期16星期。</p>
-<p><br></p>
-<p><br></p>
 <p>[1] 立法會 (2018) 沙田至中環線工程的最新進展，CB(4)292/18-19(01)，https://www.legco.gov.hk/yr18-19/chinese/panels/tp/tp_rdp/papers/tp_rdp20181207cb4-292-1-c.pdf</p>
 <p>[2] 立場 (2018)【沙中綫醜聞】政府採納港鐵建議　委港大隨機鑿80處石屎檢查　料需時16周，12月5日。https://thestandnews.com/society/%E6%B2%99%E4%B8%AD%E7%B6%AB%E9%86%9C%E8%81%9E-%E6%94%BF%E5%BA%9C%E6%8E%A1%E7%B4%8D%E6%B8%AF%E9%90%B5%E5%BB%BA%E8%AD%B0-%E5%A7%94%E6%B8%AF%E5%A4%A7%E9%9A%A8%E6%A9%9F%E9%91%BF80%E8%99%95%E7%9F%B3%E5%B1%8E%E6%AA%A2%E6%9F%A5-%E6%96%99%E9%9C%80%E6%99%8216%E5%91%A8/?fbclid=IwAR0iQmRwm5AHfZ0XfC5v6SFD-HwBrBhgGtjnbsgU1EwcdPNbW9nhO9ziY84</p>
 <p>[3] 蘋果日報 (2018)【豆腐沙中綫】與禮頓供詞衝突！前港鐵監督：查螺絲帽非我負責，12月6日。https://hk.news.appledaily.com/local/realtime/article/20181206/58999288?fbclid=IwAR19y2blqVw1pnGg6qbgae7T1oWSoa3FKrjjTFiIMir5VyCLZmeBVGpgSyY</p>
-<p><br></p>
-<p><br></p>
