--- a/_posts/2019-05-30-VOCUS-明日大嶼工程的利息支出估算.html
+++ b/_posts/2019-05-30-VOCUS-明日大嶼工程的利息支出估算.html
@@ -10,8 +10,8 @@ author: REDBRIC
 
 <p>關於明日大嶼人工島的工程造價估算，大家可以參考我在10月14日在報章的分析 [1]，分為(1)填海、(2)對外交通基建及(3)島上基建三大項工程，合共約9500億元 (以2023年價格計算，下同)。然而，有網友提醒以上三項成本並未包括財務成本，不論是發債或以儲備支付，均需計算利息支出或機會成本。因此，本文特別為明日大嶼工程的利息支出進行一次簡單的估算，從而得出工程的總成本估算。</p>
 <p>誠然，因為政府至今仍未就該項目的工程進度提出一個時間表，因此，只能夠以一般假設來進行初步估算。首先，根據一般工程支出為S-Curve的估算模型，即最前和最後的支出較少，中段支出較多的S型支出，而賣地收入則以5年直線模型估算 ，圖1藍色虛線顯示由第1至第15年的付債金額；以年利率3厘計算，橙色實線為每年的工程利息支出。</p>
+<img src="https://images.vocus.cc/0e772326-52d9-4758-bbb0-aa6d645a8b4a.png" alt="圖1 明日大嶼工程的每年債務及利息支出估算">
 <p>圖1 明日大嶼工程的每年債務及利息支出估算</p>
 <p>為簡單起見，S-CURVE模型使用 logistic function f(x) = 1 / (1+ e^-x)，x = -4,-3,-2,-1,0,1,2,3,4,5。第1年的債務只有171億元，第3年開始升至1132億元，第8年已經升至9050億元，第10年的債務大致達9500億元 (不計利息)。第11年開始先賣1800多億元土地，及後4年每年賣1900億元土地，至第15年假設賣地完全收回9500億元工程成本。(必須指出，這些假設只為簡單解說而設，更適合的假設須要政府進一步提供資料才能確定，包括賣地數量對賣地價格的影響，總賣地數量能否賣到9500億元等。)</p>
 <p>若以此債務計算，第1年的利息支出只需5億元，但第10年的利息支出急升至283億元，該15年內的利息總支出高達2135.6億元，是工程造價9500億元的22%。兩數相加，即項目總成本為11,635.6億元。</p>
-<p><br></p>
 <p>[1] 姚松炎 (2018) 明日大嶼的投資分析，明報 10月14日。https://news.mingpao.com/pns/dailynews/web_tc/article/20181014/s00005/1539453980507</p>
