--- a/_posts/2020-08-18-VOCUS-香港建造業的生產力下降.html
+++ b/_posts/2020-08-18-VOCUS-香港建造業的生產力下降.html
@@ -11,14 +11,11 @@ author: REDBRIC
 <p>即使近十年香港的建造業已大幅增加產量，又大量增加工地工人和專業人士，政府更大幅撥款支持建造業，成立建造業議會；但結果是建造業的生產力持續下降，這結論在今年學者發表的研討會文章中已確定了全因素生產力下降的原因和幅度，但政府發展局的建造業2.0報告卻只提出疑問如下：</p>
 <p>『經過深入分析，建造業其實是僱用了大量工人來完成相若的工程量。這引申出一個問題，經過了二十年技術和建造能力的提升，建造業的生產力實際上是否不斷下降？....我們無法評估和比較我們每年建造業生產力的表現，亦導致行內缺乏競爭及改善表現的機會。』[1]</p>
 <p>事實上，建造業對香港的經濟產值的貢獻一直維持在很低的水平，比房產、專業及商業服務業的貢獻少得多。圖1顯示香港的建造業 (藍線)與房產、專業及商業服務業(橙線)佔生產值的百分比 [2]，後者在2000年只有前者的不足一倍，但差距一路擴闊，至2007年更接近4倍！即使其後收窄至一倍多，但由於自2008年後建造業產量的升幅很大程度上是公營工程增加的結果[3]，並非市場的正常投資行為，容易引致效率低下的結果。</p>
-<p><br></p>
+<img src="https://images.vocus.cc/62290f57-bb22-4896-8630-19abb568943a.png" alt="圖1 來源：香港建造業產值佔生產總值比例，香港統計處 [2]">
 <p>圖1 來源：香港建造業產值佔生產總值比例，香港統計處 [2]</p>
 <p>Zhan et al. (2018) 發表有關香港建造業的全因素生產力 (TFP) 研究，結果發現從2003至2014年間，TFP每年正以平均 -2.15% 的速度下降，即十多年合共下降超過2成，原因包括人力及物料技術兩方面，年青人不願入行，沒有研究及投資自動化等，其他還有關於缺乏培訓都對生產力下降有影響。事實上，當公營工程量突然大量飊升，不但人力資源跟不上，容易造成成本上升，更會引致生產力下降，導致浪費，甚至工傷和死亡增加，和工程失誤和偷工減料等惡果。原文如下：</p>
 <p>“The results reveal a downward trend of construction productivity in Hong Kong with a negative average TFP growth rate of −2.15% per annum over the period from 2003 to 2014. Through correlation analyses this trend was found to be shaped by the factors including manpower issues and low material technology progress. A number of important measures were identified to improve the TFP growth, including young workers engagement and motivation, research & development investment in automated or semi-automated installations, assembly, and building industrialisation, lean thinking, and project development incentives at industry level. Additional ones include addressing labour management, training and education at organisation level, as well as labour co-operation and on-site learning at activity level.“ </p>
 <p>政府在增加公營工程量前，必須先處理好有關生產力下跌和工傷死亡嚴重等問題，否則下一波每年過千億元工務工程上馬，只會令更多工人傷亡、更昂貴的工程造價、更多工程事故和偷工減料、更頻密和嚴重的超支和超時，及更低下的生產力！</p>
-<p><br></p>
-<p><br></p>
-<p><br></p>
 <p>[1] 香港政府發展局 (2018)「建造業2.0」報告，https://www.hkc2.hk/booklet/Construction-2-0-tc.pdf</p>
 <p>[2] 香港統計處 (2018) Table 036 :Gross Domestic Product(GDP) by major economic activity - percentage contribution to GDP at basic prices。https://www.censtatd.gov.hk/hkstat/sub/sp250.jsp?tableID=036&ID=0&productType=8</p>
 <p>[3] 姚松炎 (2018) 香港建築業高度依賴公營工程的惡果，11月26日。https://vocus.cc/@ecyY/5bf7a282fd897800019f1849</p>
