--- a/_posts/2018-12-27-VOCUS-每名業主最多一項物業可享差餉寬減.html
+++ b/_posts/2018-12-27-VOCUS-每名業主最多一項物業可享差餉寬減.html
@@ -11,6 +11,7 @@ author: REDBRIC
 <p>過去每當香港政府的收入盈餘過多，會以各式各樣的所謂「派糖」方法派出去，為減少行政成本，政府往往會採用差餉寬減、公屋免租或電費減免等方式派發，因為這些以住宅單位為準則(而不是以人頭為準則)的寬減方式都能輕易找到繳費戶口，只要減收費用或退款回戶口就可達至派錢的效果。</p>
 <p>然而，這些以住宅單位的寬減措施容易造成分配不公，其中最為人咎病的莫過於差餉寬減措施，過去幾年均出現一人或一家公司因擁有過百或上千項物業而享有數以千萬元計的差餉寬減，引起社會的強大反對聲音！一般認為政府應擔當財富再分配的角色，應向富人收稅，以福利資助派發給窮人，以平抑貧富懸殊等現象。這些財富再分配的工作均必須以個人或家庭為分配單位，而不是以物業作為分配單位。相反，若以物業作為寬減對象，由於富豪通常比平民擁有更多物業，賺大錢的企業亦常常投資房地產，隨時坐擁過百項物業作出租或投資用途 (甚至違法變更用途)，因此若恆常以差餉寬減作為派糖機制，變相鼓勵房產投資 (可獲豁免差餉稅)，擁有物業愈多、退稅愈多。</p>
 <p>譬如在最近一次的差餉寬減機制，其中享有最多差餉寬減額的業主是一位擁有15,645個物業的業主，差餉寬減額高達1.026億港元，被指責為還富於富！(圖1)</p>
+<img src="https://images.vocus.cc/38ccfd40-09f4-418f-ad55-a42e2652103b.jpg" alt="圖1 首10名享有最多差餉寬減額的差餉繳納人，合共持有逾4萬個物業，寬減額達2.565億元。 來源：明報(2018a) [1]">
 <p>圖1 首10名享有最多差餉寬減額的差餉繳納人，合共持有逾4萬個物業，寬減額達2.565億元。 來源：明報(2018a) [1]</p>
 <p>有見及此，財經事務及庫務局最近向立法會提交文件，建議日後差餉寬減改為以業主而非物業作單位，個人或公司業主如擁有多於一個物業，只可選擇其中一項物業享差餉寬減，相關建議有待立法會通過。據聞已有不少議員表示反對建議，多數認為新做法會引致不公平。</p>
 <p>譬如過往如果租客直接付差餉者可享寬減，但在新方案下若其業主擁有多於一項物業作出租，則租戶可能再不獲退差餉，殺錯良民，並不公道。另外亦有一種聲音認為業主無論擁有多少個物業，每季也交足差餉，退差餉卻只退一個物業，做法不公。[2]</p>
@@ -19,4 +20,3 @@ author: REDBRIC
 <p>然而，隨著電子貨幣的普及，愈來愈多市民擁有如個人登記八達通或手機錢包，把退款存入八達通或手機錢包的行政成本應可減低，甚至不經銀行亦可以轉款。而即使現時仍未有個人登記八達通或手機錢包，申請手續相對簡便和免費 (但八達通需要付按金)，亦可讓市民選擇不收退款，各適其式。長遠而言，如果智能身份證能夠加入電子貨幣儲存功能，政府的派錢行動可以準確做到一人一份的派發原則，避免因為戶口問題引致的派多派錯等缺點。</p>
 <p>[1] 明報(2018a) 擁萬五物業業主慳差餉逾億 議員促寬免設限 免還富於富，4月10日。</p>
 <p>[2] 明報(2018b) 差餉寬減擬限一業主一伙 未阻持多公司擁多物業重複受惠，12月12日。https://news.mingpao.com/pns/%E6%B8%AF%E8%81%9E/article/20181212/s00002/1544552173875/%E5%B7%AE%E9%A4%89%E5%AF%AC%E6%B8%9B%E6%93%AC%E9%99%90%E4%B8%80%E6%A5%AD%E4%B8%BB%E4%B8%80%E4%BC%99-%E6%9C%AA%E9%98%BB%E6%8C%81%E5%A4%9A%E5%85%AC%E5%8F%B8%E6%93%81%E5%A4%9A%E7%89%A9%E6%A5%AD%E9%87%8D%E8%A4%87%E5%8F%97%E6%83%A0</p>
-<p><br></p>
