--- a/_posts/2022-04-23-INMEDIA-政府申11億粉嶺和合石旁建屋-何家園村滅村-村民-始終我哋冇權.html
+++ b/_posts/2022-04-23-INMEDIA-政府申11億粉嶺和合石旁建屋-何家園村滅村-村民-始終我哋冇權.html
@@ -8,14 +8,14 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/12344.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 政府覓地建屋，計劃於粉嶺第48區和合石旁建屋，非原居民村何家園村滅村。當局向立法會工務小組提交文件，申請11.45億作平整土地及基礎建設。多年前已多次表達反對的村民感無奈：「因為始終我哋冇權，反對就反對咗，佢哋唔聽都冇辦法。」</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/12344.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 政府覓地建屋，計劃於粉嶺第48區和合石旁建屋，非原居民村何家園村滅村。當局向立法會工務小組提交文件，申請11.45億作平整土地及基礎建設。2020年知悉事件、已多次表達反對的村民感無奈：「因為始終我哋冇權，反對就反對咗，佢哋唔聽都冇辦法。」</p>
 <p>政府於2017年核准原被劃為「工業」地帶的粉嶺第48區，改為發展公營房屋，預計提供約4,000個公屋單位，居住約一萬人，並會興建一所24班的小學校舍，提供612個小學學位。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/90555D" title="螢幕截圖 2022-04-22 下午2.03.19"><img src="https://live.staticflickr.com/65535/52021585845_fc435026f3.jpg" width="500" alt="螢幕截圖 2022-04-22 下午2.03.19" /></a></p>
 <p><strong>村民無奈反對意見遭漠視</strong></p>
 <p>收地範圍包括非原居民村何家園村，原址將輿建小學。村民曾多次表達反對意見，在何家園村居住50多年的周先生對政府「一意孤行」感到無奈：「因為始終我哋冇權，反對就反對咗，佢哋唔聽都冇辦法」。他指現時已沒有希望，只能面對現實：「已經冇咩可以做，如果做一啲好極端嘅行動，只會自己蝕底，冇意思。」</p>
 <p>另一名村民梁太20年前嫁入村，她丈夫於何家園村出生。梁太同樣不滿政府漠然民意，「宜家對於政府夾硬嚟都冇咩睇法」。她稱不反對政府興建公屋，但不解為何要清拆何家園村以興建學校，她質疑在移民潮下，學生需求已減少，「點解要滅我條村嚟起學校？宜家咁多學校都殺校，你估冇人走咩？唔係政府話冇人走、冇人移民呀嘛？」</p>
 <p><strong>村民望可原區安置、動物獲妥善安排</strong></p>
-<p>當局已於去年（2021年）進行土地凍結登記，梁太表示他們的期望時2023年12月。她稱不清楚安置賠償的安排，批評當局只派發了一份內容難以理解的小冊子予村民，「你比本小冊子我，我都未必都睇得明，更何況啲老人家？政府樣樣嘢比本書市民就睇得明，咁要你嚟做咩啫？」要求當局再派員向村民解說。</p>
+<p>當局已於去年（2021年）進行土地凍結登記，梁太表示他們的期限是2023年12月。她稱不清楚安置賠償的安排，批評當局只派發了一份內容難以理解的小冊子予村民，「你比本小冊子我，我都未必都睇得明，更何況啲老人家？政府樣樣嘢比本書市民就睇得明，咁要你嚟做咩啫？」要求當局再派員向村民解說。</p>
 <p>梁太期望能原區安置，養有兩隻狗的梁太，亦望能恩恤村民帶同寵物上樓，並妥善安置其他村民的動物，不要再出現新界東北發展掀起的寵物棄養潮：「好多村民有都有養動物，咁啲動物點安置呢？佢都係我哋一份子 。」</p>
 <p>根據土木工程拓展署向立法會提交的文件，署方將收回約1.8公頃私人土地，及約2.4公頃政府土地。受影響的住戶約104個，約25個業戶、204人受影響，511個構築物及一個墳墓將被清拆。署方將根據相關條例發放法定補償，亦會按現行一般特惠補償及安置安排，向受影響的合資格人士發放特惠津貼及安置安排，徽地費用料約為4.1億。</p>
 <p><strong>區議會曾提交通及配套問題 惟反對意見遭無視</strong></p>
