--- a/_posts/2022-04-23-INMEDIA-金宵以外-訪三位菲裔土生港人-兩位外傭-為何他們因此受傷.html
+++ b/_posts/2022-04-23-INMEDIA-金宵以外-訪三位菲裔土生港人-兩位外傭-為何他們因此受傷.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/5interviews.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>「I am transforming into another person」，演員黃婉華一邊塗黑皮膚，一邊以菲律賓口音笑說，「I am sun-tanning right now」。</p>
-<p>這條花絮片段，來自無綫電視劇集《金宵大廈2》的單元故事「姐姐」，現在已被刪除。這個單元故事，找來華裔演員黃婉華（Franchesca Wong）塗黑臉飾演菲傭，而劇中菲傭曾墮胎、似是使用巫術，亦被指會「搶人老公」、以邪術迷惑男人。事件引發軒然大波，有外傭和在港菲人表示感到冒犯，發起聯署要求道歉；與此同時，不少本地媒體誇讚演員的演出，也有不少人反指批評者過於敏感。</p>
+<p>這條花絮片段，來自無綫電視劇集《金宵大廈2》的單元故事「姐姐」，現在已被刪除。這個單元故事，找來華裔演員黃婉華（Franchesca Wong）塗黑臉飾演菲傭，而劇中菲傭曾墮胎、似是使用巫術，亦被指會「搶人老公」、以邪術迷惑男人。事件引發軒然大波，有外傭和在港菲人表示感到冒犯，發起<a href="https://www.change.org/p/barrackokarma1968-demanding-accountability-racist-depiction-of-filipino-domestic-workers">聯署</a>要求道歉；與此同時，不少本地媒體誇讚演員的演出，也有不少人反指批評者過於敏感。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/KU60N4" title="螢幕截圖 2022-04-21 上午11.13.59"><img src="https://live.staticflickr.com/65535/52019097989_a0ef15389c.jpg" width="500" alt="螢幕截圖 2022-04-21 上午11.13.59" /></a></p>
 <p>一套劇集，在不少人眼中只是娛樂和創作，何以對某些人來說，卻令他們感到被冒犯與難過？在一片「玻璃心」和「左膠」的批評聲音背後，到底過去什麼樣的經驗，令這些人選擇發聲？</p>
 <p>《獨媒》訪問五名在港菲律賓人和外傭，他們當中，有人在香港土生土長，但非華語中學的老師會公開廣播「回去你們的國家」；有人擔任演員，但被試鏡要求飾演病毒，理由是作為菲律賓人的他皮膚夠黑；也有人曾因為膚色，而被僱主禁用梳化、洗衣機和床褥。</p>
@@ -44,7 +44,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/U5S29R" title="WhatsApp Image 2022-04-20 at 8.29.42 PM"><img src="https://live.staticflickr.com/65535/52024344036_fafd575581.jpg" width="500" alt="WhatsApp Image 2022-04-20 at 8.29.42 PM" /></a><br /><em>受訪者提供（攝影：Karen）</em></p>
 <p>Ray 也試過，萬聖節時在主題樂園扮鬼，負責人提議他用他加祿語嚇人，「比較得人驚」；在某劇集做綁匪時，亦被要求說他加祿語，「場面會真實一點」。「我知道他們沒有惡意，也不是刻意種族歧視，但問題是他們太無感，覺得可以利用我們的身分做『道具』增加戲劇效果，卻不知道這令我們感到被冒犯和不舒服。」</p>
 <p>看過《金宵》劇集的 Ray 說，理解劇中的美術指導，但重點不是黃婉華演得好不好，而是劇中角色對外傭的定型，例如提及外傭會搶人老公。「人們看電視，會將虛構的當為真實，而這會影響人們如何對待社會上的少數族裔。事實上也有人因這種感覺而對外傭不好，或因為這樣而不聘請她們。」</p>
-<p>他不是要責怪任何人，「如果人們因為欠缺教育和意識，無知而冒犯人，我可以原諒」，他只是覺得，當香港有這麼多各行各業的少數族裔，或許在主流媒體上，也可以多點呈現他們不一樣的故事，「我們也會想看這樣的故事」。</p>
+<p>他不是要責怪任何人，「如果人們因為欠缺教育和意識，無知而冒犯人，我可以原諒」，他只是覺得，當香港有這麼多各行各業的少數族裔〔註一〕，或許在主流媒體上，也可以多點呈現他們不一樣的故事，「我們也會想看這樣的故事」。</p>
 <p>「我們也可以很融入香港社會。」自小被喚「賓仔」、遇過各種歧視，長大後他自問與香港人同事打成一片。「這種東西還出現在電視上，實在太過時了。」</p>
 <p>＊  ＊  ＊  ＊  ＊</p>
 <h3>Izzy，27歲，菲裔表演者：我不是不想演家傭，但我想講不一樣的故事</h3>
@@ -56,7 +56,7 @@ author: 獨媒報導
 <p>「我不明白，我在講廣東話時要怎樣講得更像菲律賓人？」</p>
 <p>Izzy 說，塗啡臉的爭議，是來自歷史上白人塗黑臉來譏諷和壓迫有色人種。情況來到香港，演員在《金宵》塗啡臉、扮口音對她來說固然是一個問題——「我不知道任何（菲律賓）人是那樣說話的，甚至不是所有菲律賓人的皮膚都那樣黑」，而更大的問題，一如許多菲裔港人所提到的，是角色的刻板。</p>
 <p>「媒體呈現的東西，會影響本地人如何看待香港的少數族裔。我祖父和爸爸都是建築師，有份參與港島線和中銀大廈的建造，我未婚夫是一個物理治療師。我們不是全都是家傭，我們有很多故事可以訴說。」</p>
-<p>Izzy 強調，她不是不想飾演家傭，也很佩服這些堅強而有毅力的同鄉。「問題是這些角色永遠不會講述家傭另一面的故事，這不是我作為演員想要做的。比起不小心地倒瀉飲品，我更希望呈現家傭的困難、掙扎、家人、子女，就像《淪落人》和《Ateh》一樣。」</p>
+<p>Izzy 強調，她不是不想飾演家傭，也很佩服這些堅強而有毅力的同鄉。「問題是這些角色永遠不會講述家傭另一面的故事，這不是我作為演員想要做的。比起不小心地倒瀉飲品，我更希望呈現家傭的困難、掙扎、家人、子女，就像《淪落人》和《Ateh》〔註二〕一樣。」</p>
 <p>＊  ＊  ＊  ＊  ＊</p>
 <h3>Eni，來港20年印傭：在香港，黑皮膚是有很多後果的</h3>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/YeYtPC" title="國際移民工聯盟主席 Eni Lestari"><img src="https://live.staticflickr.com/65535/49736859638_5ac682083c.jpg" width="500" alt="國際移民工聯盟主席 Eni Lestari" /></a><br /><em>資料圖片</em></p>
@@ -85,5 +85,7 @@ author: 獨媒報導
 <p>五人都樂見她的道歉。「至少她的支持者可以借今次機會了解到這個問題。說到尾，我們也只是想人們更關注在媒體上對少數族裔的呈現。」Ray 說。</p>
 <p>不少人都說，明白演員受角色所限，亦沒想過全盤怪責她，對 Joey 而言，「創造恰當而平等的角色本是電視台的責任」。只是像 Eni 和 Shiela 提到的，或許在演員日後飾演任何邊緣社群時，可以更加敏感和小心，切身地代入他們的處境和感受。</p>
 <p>「我很高興她承認有人因這次事件而受傷，並願意說更好的故事。」Izzy 說。但她強調，事情還未完結。事實上，「這只是我們更好地溝通、在媒體更好地呈現少數族裔的開始」。</p>
+<p>註一：香港現時有近34萬名外傭，較疫情前的近40萬人有所回落。據2016年中期人口統計數據，居港少數族裔佔全港人口8%，當中大部分為菲律賓人、印尼人和南亞裔，而撇除當時39萬名外傭後，共有約26萬名少數族裔於香港居住。<br />
+註二：《Ateh》由高思約編導，Miles Sible主演，講述一名因懷孕而要回鄉的外傭，與香港養大的孩子分離的故事，獲第十五屆鮮浪潮國際短片節特別表揚和最受觀眾歡迎獎。</p>
 <p>記者：黃蕊獻</p>
 </div></div></div>
