--- a/_posts/2022-04-23-INMEDIA-體制外支援囚友家屬-劉家棟一年來的獨立社工路-坐監不只是一個人的事.html
+++ b/_posts/2022-04-23-INMEDIA-體制外支援囚友家屬-劉家棟一年來的獨立社工路-坐監不只是一個人的事.html
@@ -22,7 +22,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/852r12" title="無標題"><img src="https://live.staticflickr.com/65535/50035271163_a0122966a3_z.jpg" width="640" alt="無標題" /></a></p>
 <script async="" src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script><p><em>2020年6月23日，劉家棟向高等法院申請保釋等候上訴，獲法官批准。期間超過200人在法院外聲援他，高叫：「撐家棟！撐手足！」（資料圖片）</em></p>
 <p><strong>另類方式做支援  助囚友見MV女主角、修補家庭關係</strong>   </p>
-<p>劉家棟與一般內社工的最大分別，是沒有一般機構可以依附。 這有好有壞，好處是少了很多體制上的限制，可以以較自由的方式跟進個案或做支援。試過有囚友跟他說，很喜歡某個 MV 的女主角，劉於是主動私訊那名女主角，問她能否一起前去監獄探訪。有其他囚友知道後，故意著福利官打電話給他，開玩笑說自己見某某著名歌手，害劉家棟暫時不敢再做類似的事：「玩嘢呀，點搵吖！」</p>
+<p>劉家棟與一般體制內社工的最大分別，是沒有一般機構可以依附。 這有好有壞，好處是少了很多體制上的限制，可以以較自由的方式跟進個案或做支援。試過有囚友跟他說，很喜歡某個 MV 的女主角，劉於是主動私訊那名女主角，問她能否一起前去監獄探訪。有其他囚友知道後，故意著福利官打電話給他，開玩笑說自己見某某著名歌手，害劉家棟暫時不敢再做類似的事：「玩嘢呀，點搵吖！」</p>
 <p>他也會與出獄後的年青人保持聯絡，有需要的話會繼續給予輔導或職涯建議。而除了直接支援在囚人士，劉家棟同時會支援他們的家人。像有位囚友是單親媽媽，有三個小朋友，劉會替他們處理書簿費，也會送生日禮物給他們。他又會嘗試修補一些「子女黃，父母藍」的家庭關係：「盡量啦，有啲修補唔到就好大鑊。」他想起一個例子，「例如阿媽捕住個仔冇守宵禁令，跟住之後佢（個仔）就入返去⋯⋯」</p>
 <p>有別於一般社工相對單一的服務範疇，他形容現時的自己「樣樣都要做」：邊青夜展、家庭關係、職涯建議、感情問題，通通都是要涉獵的範疇。</p>
 <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D398044518623732%26id%3D108296297598557&amp;show_text=true&amp;width=500" width="500" height="676" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe><p>
